bin_PROGRAMS = jamyxer
# jamyxer_SOURCES = `find . -maxdepth 1 -type f | grep '\.\(h\|cpp\)' | sed 's/.*_config.cpp//' | tr '\n' ' '`
jamyxer_SOURCES = main.cpp main.h settings.h backend.h config_writer.h settings.cpp backend.cpp json_config.cpp commands.h commands.cpp server.h server.cpp


# if YAML_CONF
# EXTRA_jamyxer_SOURCES = yaml_config.cpp
# jamyxer_LDADD = -lyaml-cpp
# AM_CPPFLAGS = -DYAML_CONFIG
# else
# EXTRA_jamyxer_SOURCES = xml_config.cpp
# jamyxer_LDADD = -ltinyxml2
# AM_CPPFLAGS = -DXML_CONFIG
# endif


